# afip.py

./: LICENSE.txt  README.md  pyproject.toml
afip/: __init__.py  afip.py  electronic_billing.py  electronicbilling.py  register_inscription_proof.py  register_scope_ten.py  register_scope_thirteen.py  web_service.py  webservice.py
