[tool.poetry]
name = "afip.py"
version = "1.1.0"
description = "AfipSDK is the fastest way to connect with AFIP"
authors = ["AfipSDK <afipsdk@gmail.com>"]
readme = "README.md"
packages = [{include = "afip"}]

[tool.poetry.dependencies]
python = "^3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
