[tool.poetry]
name = "afip.py"
version = "1.2.0"
description = "Conéctate a ARCA hoy mismo"
authors = ["AfipSDK <ayuda@afipsdk.com>"]
readme = "README.md"
packages = [{include = "afip"}]

[tool.poetry.dependencies]
python = "^3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
